Migrated to scala 2.12 and updated libreries